apps/minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disco-panel
  namespace: nori-cloud
spec:
  type: ClusterIP
  selector:
    app: disco-panel
  ports:
    - port: 8080
      targetPort: 8080
      name: http
