apps/minecraft/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crafty
  namespace: nori-cloud
  labels:
    app: crafty
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mc.norriswu.me`)
      kind: Rule
      services:
        - name: crafty
          port: 8443
          scheme: https
          serversTransport: crafty-transport
